// Vitest Snapshot v1

exports[`ImageViewer > ImageViewer backgroundVue demo works fine 1`] = `
<div>
  <div
    class="t-cell-group t-cell-group--default dialog-type-title"
  >
    <div
      class="t-cell-group__title"
    >
      
      backgroundColor: 设置遮罩的背景颜色
      
    </div>
    
    <div
      class="t-cell t-cell--middle t-cell--borderless"
      value-align="left"
    >
      <div
        class="t-cell__left"
      >
        <!--v-if-->
        <!--v-if-->
      </div>
      <!--v-if-->
      <div
        class="t-cell__note"
      >
        
        <button
          aria-disabled="false"
          class="t-button t-size-m t-button--base t-button--primary t-button--shape-rectangle"
          role="button"
        >
          <!---->
          <span
            class="t-button__text"
          >
            
             显示 
            
          </span>
        </button>
        <transition-stub
          appear="false"
          background-color="rgba(0, 0, 0, 1)"
          class="t-image-viewer"
          css="true"
          name="t-overlay"
          persisted="true"
        >
          <div
            class="t-overlay"
            style="z-index: 1000; transition-duration: 300ms; display: none;"
          >
            
            
          </div>
        </transition-stub>
        
      </div>
      <!--v-if-->
    </div>
    
  </div>
</div>
`;

exports[`ImageViewer > ImageViewer baseVue demo works fine 1`] = `
<div
  class="image-viewer-demo"
  data-v-734c791c=""
>
  <button
    aria-disabled="false"
    class="t-button t-size-l t-button--outline t-button--default t-button--shape-rectangle t-is-block"
    data-v-734c791c=""
    role="button"
  >
    <!---->
    <span
      class="t-button__text"
    >
      
       基础用法 
      
    </span>
  </button>
  <transition-stub
    appear="false"
    class="t-image-viewer"
    css="true"
    data-v-734c791c=""
    name="t-overlay"
    persisted="true"
  >
    <div
      class="t-overlay"
      style="z-index: 1000; transition-duration: 300ms; display: none;"
    >
      
      
    </div>
  </transition-stub>
</div>
`;

exports[`ImageViewer > ImageViewer closeBtnVue demo works fine 1`] = `
<div
  class="image-viewer-demo"
  data-v-04bcb836=""
>
  <button
    aria-disabled="false"
    class="t-button t-size-l t-button--outline t-button--default t-button--shape-rectangle t-is-block"
    data-v-04bcb836=""
    role="button"
  >
    <!---->
    <span
      class="t-button__text"
    >
      
      不展示关闭按钮
      
    </span>
  </button>
  <transition-stub
    appear="false"
    class="t-image-viewer"
    css="true"
    data-v-04bcb836=""
    name="t-overlay"
    persisted="true"
  >
    <div
      class="t-overlay"
      style="z-index: 1000; transition-duration: 300ms; display: none;"
    >
      
      
    </div>
  </transition-stub>
</div>
`;

exports[`ImageViewer > ImageViewer closeEventVue demo works fine 1`] = `
<div
  class="image-viewer-demo"
  data-v-3939d0e3=""
>
  <button
    aria-disabled="false"
    class="t-button t-size-l t-button--outline t-button--default t-button--shape-rectangle t-is-block"
    data-v-3939d0e3=""
    role="button"
  >
    <!---->
    <span
      class="t-button__text"
    >
      
      监听关闭事件
      
    </span>
  </button>
  <transition-stub
    appear="false"
    class="t-image-viewer"
    css="true"
    data-v-3939d0e3=""
    name="t-overlay"
    persisted="true"
  >
    <div
      class="t-overlay"
      style="z-index: 1000; transition-duration: 300ms; display: none;"
    >
      
      
    </div>
  </transition-stub>
</div>
`;

exports[`ImageViewer > ImageViewer imageListVue demo works fine 1`] = `
<div>
  <div
    class="t-cell-group t-cell-group--default dialog-type-title"
  >
    <div
      class="t-cell-group__title"
    >
      
      图片数组：images
      
    </div>
    
    <div
      class="t-cell t-cell--middle t-cell--borderless"
      value-align="left"
    >
      <div
        class="t-cell__left"
      >
        <!--v-if-->
        <!--v-if-->
      </div>
      <!--v-if-->
      <div
        class="t-cell__note"
      >
        
        <button
          aria-disabled="false"
          class="t-button t-size-m t-button--base t-button--primary t-button--shape-rectangle"
          role="button"
        >
          <!---->
          <span
            class="t-button__text"
          >
            
             图片列表 
            
          </span>
        </button>
        <transition-stub
          appear="false"
          class="t-image-viewer"
          css="true"
          name="t-overlay"
          persisted="true"
        >
          <div
            class="t-overlay"
            style="z-index: 1000; transition-duration: 300ms; display: none;"
          >
            
            
          </div>
        </transition-stub>
        
      </div>
      <!--v-if-->
    </div>
    
  </div>
</div>
`;

exports[`ImageViewer > ImageViewer initialIndexVue demo works fine 1`] = `
<div>
  <div
    class="t-cell-group t-cell-group--default dialog-type-title"
  >
    <div
      class="t-cell-group__title"
    >
      
      initialIndex: 默认展示第二张图片
      
    </div>
    
    <div
      class="t-cell t-cell--middle t-cell--borderless"
      value-align="left"
    >
      <div
        class="t-cell__left"
      >
        <!--v-if-->
        <!--v-if-->
      </div>
      <!--v-if-->
      <div
        class="t-cell__note"
      >
        
        <button
          aria-disabled="false"
          class="t-button t-size-m t-button--base t-button--primary t-button--shape-rectangle"
          role="button"
        >
          <!---->
          <span
            class="t-button__text"
          >
            
             默认展示 
            
          </span>
        </button>
        <transition-stub
          appear="false"
          class="t-image-viewer"
          css="true"
          name="t-overlay"
          persisted="true"
        >
          <div
            class="t-overlay"
            style="z-index: 1000; transition-duration: 300ms; display: none;"
          >
            
            
          </div>
        </transition-stub>
        
      </div>
      <!--v-if-->
    </div>
    
  </div>
</div>
`;

exports[`ImageViewer > ImageViewer mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
>
  <h1
    class="title"
  >
    ImageViewer 图片预览
  </h1>
  <p
    class="summary"
  >
    图片全屏放大预览效果，包含全屏背景色、页码位置样式、增加操作等规范
  </p>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        01 类型
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        图片预览类型
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="image-viewer-demo"
        data-v-734c791c=""
      >
        <button
          aria-disabled="false"
          class="t-button t-size-l t-button--outline t-button--default t-button--shape-rectangle t-is-block"
          data-v-734c791c=""
          role="button"
        >
          <!---->
          <span
            class="t-button__text"
          >
            
             基础用法 
            
          </span>
        </button>
        <transition-stub
          appear="false"
          class="t-image-viewer"
          css="true"
          data-v-734c791c=""
          name="t-overlay"
          persisted="true"
        >
          <div
            class="t-overlay"
            style="z-index: 1000; transition-duration: 300ms; display: none;"
          >
            
            
          </div>
        </transition-stub>
      </div>
      <div
        class="image-viewer-demo"
        data-v-04bcb836=""
      >
        <button
          aria-disabled="false"
          class="t-button t-size-l t-button--outline t-button--default t-button--shape-rectangle t-is-block"
          data-v-04bcb836=""
          role="button"
        >
          <!---->
          <span
            class="t-button__text"
          >
            
            不展示关闭按钮
            
          </span>
        </button>
        <transition-stub
          appear="false"
          class="t-image-viewer"
          css="true"
          data-v-04bcb836=""
          name="t-overlay"
          persisted="true"
        >
          <div
            class="t-overlay"
            style="z-index: 1000; transition-duration: 300ms; display: none;"
          >
            
            
          </div>
        </transition-stub>
      </div>
      <div
        class="image-viewer-demo"
        data-v-3939d0e3=""
      >
        <button
          aria-disabled="false"
          class="t-button t-size-l t-button--outline t-button--default t-button--shape-rectangle t-is-block"
          data-v-3939d0e3=""
          role="button"
        >
          <!---->
          <span
            class="t-button__text"
          >
            
            监听关闭事件
            
          </span>
        </button>
        <transition-stub
          appear="false"
          class="t-image-viewer"
          css="true"
          data-v-3939d0e3=""
          name="t-overlay"
          persisted="true"
        >
          <div
            class="t-overlay"
            style="z-index: 1000; transition-duration: 300ms; display: none;"
          >
            
            
          </div>
        </transition-stub>
      </div>
      
    </div>
  </div>
</div>
`;
